--- a/Frontend/TutorialWebsite/styles.css
+++ b/Frontend/TutorialWebsite/styles.css
@@ -5,12 +5,12 @@ body {
     background-color: #f4f4f4;
 }
 
-header {
+/* header {
     background-color: #6f90b4;
     color: white;
     padding: 1em 0;
     text-align: center;
-}
+} */
 
 header h1 {
     margin: 0;
