--- a/srikant/html css js/webpage/style.css
+++ b/srikant/html css js/webpage/style.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-  background-color: #3726ce;
+  background-color: #333;
   color: white;
   padding: 1rem 0;
 }
@@ -15,7 +15,7 @@ nav ul {
   margin: 0;
   padding: 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 nav ul li {
@@ -28,15 +28,24 @@ nav ul li a {
   padding: 0.5rem 1rem;
 }
 
+nav ul li a:hover {
+  background-color: #575757;
+  border-radius: 5px;
+}
+
+main {
+  padding: 2rem;
+}
+
 section {
-  margin: 2rem;
+  margin-bottom: 2rem;
 }
 
 footer {
-  background-color: #3726ce;
+  background-color: #333;
   color: white;
   text-align: center;
-  padding: 0.25rem 0;
+  padding: 1rem 0;
   position: fixed;
   bottom: 0;
   width: 100%;
